// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`syncApplication should create a TEXT field on the standard Company object 1`] = `
{
  "syncApplication": {
    "actions": [
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "The industry of the company",
          "icon": "IconBuildingFactory2",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Industry",
          "morphId": null,
          "name": "industry",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": null,
          "relationTargetObjectMetadataUniversalIdentifier": null,
          "standardOverrides": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "universalSettings": null,
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "canAccessAllTools": false,
          "canBeAssignedToAgents": true,
          "canBeAssignedToApiKeys": true,
          "canBeAssignedToUsers": true,
          "canDestroyAllObjectRecords": false,
          "canReadAllObjectRecords": false,
          "canSoftDeleteAllObjectRecords": false,
          "canUpdateAllObjectRecords": false,
          "canUpdateAllSettings": false,
          "createdAt": Any<String>,
          "description": "A test role",
          "icon": null,
          "isEditable": true,
          "label": "Test Role",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "role",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;

exports[`syncApplication should delete old field and create equivalent one when field universalIdentifier changes 1`] = `
{
  "syncApplication": {
    "actions": [
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "color": null,
          "createdAt": Any<String>,
          "description": "A support ticket",
          "duplicateCriteria": null,
          "icon": "IconTicket",
          "imageIdentifierFieldMetadataUniversalIdentifier": null,
          "isActive": true,
          "isAuditLogged": true,
          "isLabelSyncedWithName": false,
          "isRemote": false,
          "isSearchable": true,
          "isSystem": false,
          "isUICreatable": true,
          "isUIEditable": true,
          "labelIdentifierFieldMetadataUniversalIdentifier": Any<String>,
          "labelPlural": "Tickets",
          "labelSingular": "Ticket",
          "namePlural": "tickets",
          "nameSingular": "ticket",
          "shortcut": null,
          "standardOverrides": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "objectMetadata",
        "type": "create",
        "universalFlatFieldMetadatas": [
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Id",
            "morphId": null,
            "name": "id",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "UUID",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Creation date",
            "morphId": null,
            "name": "createdAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Last update",
            "morphId": null,
            "name": "updatedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Deleted at",
            "morphId": null,
            "name": "deletedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "context": null,
              "name": "'System'",
              "source": "'MANUAL'",
              "workspaceMemberId": null,
            },
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Created by",
            "morphId": null,
            "name": "createdBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "context": null,
              "name": "'System'",
              "source": "'MANUAL'",
              "workspaceMemberId": null,
            },
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Updated by",
            "morphId": null,
            "name": "updatedBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Position",
            "morphId": null,
            "name": "position",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "POSITION",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Search vector",
            "morphId": null,
            "name": "searchVector",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "TS_VECTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": {
              "asExpression": "to_tsvector('simple', COALESCE("id"::text, ''))",
              "generatedType": "STORED",
            },
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Ticket description",
            "icon": "IconFileDescription",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": false,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Description",
            "morphId": null,
            "name": "description",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "TEXT",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
        ],
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "canAccessAllTools": false,
          "canBeAssignedToAgents": true,
          "canBeAssignedToApiKeys": true,
          "canBeAssignedToUsers": true,
          "canDestroyAllObjectRecords": false,
          "canReadAllObjectRecords": false,
          "canSoftDeleteAllObjectRecords": false,
          "canUpdateAllObjectRecords": false,
          "canUpdateAllSettings": false,
          "createdAt": Any<String>,
          "description": "A test role",
          "icon": null,
          "isEditable": true,
          "label": "Test Role",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "role",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;

exports[`syncApplication should delete old field and create equivalent one when field universalIdentifier changes 2`] = `
{
  "syncApplication": {
    "actions": [
      {
        "flatEntity": {
          "applicationId": Any<String>,
          "applicationUniversalIdentifier": Any<String>,
          "calendarViewIds": [],
          "calendarViewUniversalIdentifiers": [],
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Ticket description",
          "fieldPermissionIds": [],
          "fieldPermissionUniversalIdentifiers": [],
          "icon": "IconFileDescription",
          "id": Any<String>,
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIEditable": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "kanbanAggregateOperationViewIds": [],
          "kanbanAggregateOperationViewUniversalIdentifiers": [],
          "label": "Description",
          "mainGroupByFieldMetadataViewIds": [],
          "mainGroupByFieldMetadataViewUniversalIdentifiers": [],
          "morphId": null,
          "name": "description",
          "objectMetadataId": Any<String>,
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetFieldMetadataUniversalIdentifier": null,
          "relationTargetObjectMetadataId": null,
          "relationTargetObjectMetadataUniversalIdentifier": null,
          "settings": null,
          "standardOverrides": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "universalSettings": null,
          "updatedAt": Any<String>,
          "viewFieldIds": [],
          "viewFieldUniversalIdentifiers": [],
          "viewFilterIds": [],
          "viewFilterUniversalIdentifiers": [],
          "viewSortIds": [],
          "viewSortUniversalIdentifiers": [],
          "workspaceId": Any<String>,
        },
        "metadataName": "fieldMetadata",
        "type": "delete",
        "universalIdentifier": Any<String>,
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Ticket description",
          "icon": "IconFileDescription",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Description",
          "morphId": null,
          "name": "description",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": null,
          "relationTargetObjectMetadataUniversalIdentifier": null,
          "standardOverrides": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "universalSettings": null,
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;

exports[`syncApplication should return workspace migration actions on initial sync then on second sync with field rename and new role 1`] = `
{
  "syncApplication": {
    "actions": [
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "color": null,
          "createdAt": Any<String>,
          "description": "A support ticket",
          "duplicateCriteria": null,
          "icon": "IconTicket",
          "imageIdentifierFieldMetadataUniversalIdentifier": null,
          "isActive": true,
          "isAuditLogged": true,
          "isLabelSyncedWithName": false,
          "isRemote": false,
          "isSearchable": true,
          "isSystem": false,
          "isUICreatable": true,
          "isUIEditable": true,
          "labelIdentifierFieldMetadataUniversalIdentifier": Any<String>,
          "labelPlural": "Tickets",
          "labelSingular": "Ticket",
          "namePlural": "tickets",
          "nameSingular": "ticket",
          "shortcut": null,
          "standardOverrides": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "objectMetadata",
        "type": "create",
        "universalFlatFieldMetadatas": [
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Id",
            "morphId": null,
            "name": "id",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "UUID",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Creation date",
            "morphId": null,
            "name": "createdAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Last update",
            "morphId": null,
            "name": "updatedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Deleted at",
            "morphId": null,
            "name": "deletedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "context": null,
              "name": "'System'",
              "source": "'MANUAL'",
              "workspaceMemberId": null,
            },
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Created by",
            "morphId": null,
            "name": "createdBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "context": null,
              "name": "'System'",
              "source": "'MANUAL'",
              "workspaceMemberId": null,
            },
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Updated by",
            "morphId": null,
            "name": "updatedBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Position",
            "morphId": null,
            "name": "position",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "POSITION",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Search vector",
            "morphId": null,
            "name": "searchVector",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "TS_VECTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": {
              "asExpression": "to_tsvector('simple', COALESCE("id"::text, ''))",
              "generatedType": "STORED",
            },
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Ticket description",
            "icon": "IconFileDescription",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": false,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Description",
            "morphId": null,
            "name": "description",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "TEXT",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
        ],
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "canAccessAllTools": false,
          "canBeAssignedToAgents": true,
          "canBeAssignedToApiKeys": true,
          "canBeAssignedToUsers": true,
          "canDestroyAllObjectRecords": false,
          "canReadAllObjectRecords": false,
          "canSoftDeleteAllObjectRecords": false,
          "canUpdateAllObjectRecords": false,
          "canUpdateAllSettings": false,
          "createdAt": Any<String>,
          "description": "A test role",
          "icon": null,
          "isEditable": true,
          "label": "Test Role",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "role",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "content": "# Test Skill

This is a test skill.",
          "createdAt": Any<String>,
          "description": "A skill for testing",
          "icon": "IconBrain",
          "isActive": true,
          "isCustom": false,
          "label": "Test Skill",
          "name": "test-skill",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "skill",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;
